# Far-Horizons

./: .gitattributes  .gitignore  AUTHORS  Auto.pl  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  README  README.md  example.alpha.csv  example.csv  index.html  manual.rst
.github/workflows/: build.yml  manual.yml
alpha/: .gitignore  rebuild.sh
bash/: .procmailrc  README.python  create_map.py  create_map.sh  farhorizons.yml.sample  fetch_signups.py  fhclean  fhmail  fhmake_packet  fhorders  fhprocmail  fhreports  fhsave  fhtest  fhutils.py  game_setup.py  orders.pl  orders_fetch.py  orders_verify.cgi  rc.verify  signups_fetch.py  signups_verify.py  strip.pl  test_orders.txt  turn_confirm.py  turn_run.py  turn_save.py  verify_signups.py
doc/: ad.txt  default_orders  gm_sequence  intro.txt  map.doc  policies.txt  rules
doc/examples/: Example Orders  Example Turn 1  README  galaxy.list.txt
doc/manual/: README.md  manual.html  manual.tex
doc/manual/latex/: Makefile
doc/playeraids/: Distance Calculator.xls  README
examples/: noorders.txt  species.cfg
game/: deadline.msg  fh_names
latex/: manual.rst
src/: .gitignore  AddSpecies.c  AddSpeciesAuto.c  AsciiToBinary.c  BinaryToAscii.c  CMakeLists.txt  Combat.c  Edit.c  Finish.c  HomeSystem.c  HomeSystemAuto.c  Jump.c  ListGalaxy.c  Locations.c  MakeHomes.c  Makefile  MapGalaxy.c  MapGalaxyXml.c  Near.c  NewGalaxy.c  NoOrders.c  PrintMap.c  Production.c  Report.c  ScanSpXYZ.c  Set.c  SetMain.c  ShowGalaxy.c  Stats.c  TurnNumber.c  add_tran.c  cfgfile.c  cfgfile.h  combat.c  combat.h  combat_utils.c  command.c  command.h  commandvars.c  commandvars.h  (+240 more)
src/cjson/: README.md  cJSON.c  cJSON.h  helpers.c  helpers.h
tests/: .gitignore  testall
tests/inputs/: test0001.tgz  test0002.tgz  test0003.tgz  test0004.tgz  test0005.tgz  test0006.tgz
tools/: README  README.md  create_map.py  farhorizons.yml.example  fhutils.py  game_packet.py  game_setup.py  orders_clean.py  orders_fetch.py  orders_status.py  requirements.txt  signups_fetch.py  signups_verify.py  turn_confirm.py  turn_inject.py  turn_reminder.py  turn_run.py  turn_save.py  turn_send.py
